--- a/book.asciidoc
+++ b/book.asciidoc
@@ -1,53 +1,13 @@
-UTILITARIANISM
+= Utilitarianism
 
-
-BY
-
-JOHN STUART MILL
-
-
-
-REPRINTED FROM 'FRASER'S MAGAZINE'
-
-SEVENTH EDITION
-
-LONDON
-
-LONGMANS, GREEN, AND CO.
-
+By John Stuart Mill +
+Reprinted From "Fraser's Magazine" +
+Seventh Edition +
+London +
+Longmans, Green, And Co. +
 1879
 
-
-
-
-CONTENTS.
-
-
-
-
-CHAPTER I. GENERAL REMARKS
-
-CHAPTER II. WHAT UTILITARIANISM IS
-
-CHAPTER III. OF THE ULTIMATE SANCTION OF THE PRINCIPLE OF UTILITY
-
-CHAPTER IV. OF WHAT SORT OF PROOF THE PRINCIPLE OF UTILITY IS
-SUSCEPTIBLE
-
-CHAPTER V. OF THE CONNEXION BETWEEN JUSTICE AND UTILITY
-
-
-
-
-UTILITARIANISM.
-
-
-
-
-CHAPTER I.
-
-
-GENERAL REMARKS.
+== Chapter I -- General Remarks
 
 There are few circumstances among those which make up the present
 condition of human knowledge, more unlike what might have been expected,
@@ -216,13 +176,7 @@ its meaning. Having thus prepared the ground, I shall afterwards
 endeavour to throw such light as I can upon the question, considered as
 one of philosophical theory.
 
-
-
-
-CHAPTER II.
-
-
-WHAT UTILITARIANISM IS.
+== Chapter II -- What Utilitarianism Is
 
 A passing remark is all that needs be given to the ignorant blunder of
 supposing that those who stand up for utility as the test of right and
@@ -257,7 +211,7 @@ which the new generation are acquiring their sole notion of its meaning.
 Those who introduced the word, but who had for many years discontinued
 it as a distinctive appellation, may well feel themselves called upon to
 resume it, if by doing so they can hope to contribute anything towards
-rescuing it from this utter degradation.[A]
+rescuing it from this utter degradation.footnote:[The author of this essay has reason for believing himself to be the first person who brought the word utilitarian into use. He did not invent it, but adopted it from a passing expression in Mr. Galt's _Annals of the Parish_. After using it as a designation for several years, he and others abandoned it from a growing dislike to anything resembling a badge or watchword of sectarian distinction. But as a name for one single opinion, not a set of opinions--to denote the recognition of utility as a standard, not any particular way of applying it--the term supplies a want in the language, and offers, in many cases, a convenient mode of avoiding tiresome circumlocution.]
 
 The creed which accepts as the foundation of morals, Utility, or the
 Greatest Happiness Principle, holds that actions are right in proportion
@@ -700,7 +654,7 @@ agent. He who saves a fellow creature from drowning does what is morally
 right, whether his motive be duty, or the hope of being paid for his
 trouble: he who betrays the friend that trusts him, is guilty of a
 crime, even if his object be to serve another friend to whom he is under
-greater obligations.[B] But to speak only of actions done from the
+greater obligations.footnote:[An opponent, whose intellectual and moral fairness it is a pleasure to acknowledge (the Rev. J. Llewellyn Davis), has objected to this passage, saying, "Surely the rightness or wrongness of saving a man from drowning does depend very much upon the motive with which it is done. Suppose that a tyrant, when his enemy jumped into the sea to escape from him, saved him from drowning simply in order that he might inflict upon him more exquisite tortures, would it tend to clearness to speak of that rescue as 'a morally right action?' Or suppose again, according to one of the stock illustrations of ethical inquiries, that a man betrayed a trust received from a friend, because the discharge of it would fatally injure that friend himself or some one belonging to him, would utilitarianism compel one to call the betrayal 'a crime' as much as if it had been done from the meanest motive?" I submit, that he who saves another from drowning in order to kill him by torture afterwards, does not differ only in motive from him who does the same thing from duty or benevolence; the act itself is different. The rescue of the man is, in the case supposed, only the necessary first step of an act far more atrocious than leaving him to drown would have been. Had Mr. Davis said, "The rightness or wrongness of saving a man from drowning does depend very much"--not upon the motive, but--"upon the _intention_" no utilitarian would have differed from him. Mr. Davis, by an oversight too common not to be quite venial, has in this case confounded the very different ideas of Motive and Intention. There is no point which utilitarian thinkers (and Bentham pre-eminently) have taken more pains to illustrate than this. The morality of the action depends entirely upon the intention--that is, upon what the agent _wills to do_. But the motive, that is, the feeling which makes him will so to do, when it makes no difference in the act, makes none in the morality: though it makes a great difference in our moral estimation of the agent, especially if it indicates a good or a bad habitual _disposition_--a bent of character from which useful, or from which hurtful actions are likely to arise.] But to speak only of actions done from the
 motive of duty, and in direct obedience to principle: it is a
 misapprehension of the utilitarian mode of thought, to conceive it as
 implying that people should fix their minds upon so wide a generality as
@@ -795,7 +749,7 @@ first introduced into the world by utilitarianism, while that doctrine
 does supply, if not always an easy, at all events a tangible and
 intelligible mode of deciding such differences.
 
-       *       *       *       *       *
+'''
 
 It may not be superfluous to notice a few more of the common
 misapprehensions of utilitarian ethics, even those which are so obvious
@@ -980,60 +934,7 @@ obligation in which some secondary principle is not involved; and if
 only one, there can seldom be any real doubt which one it is, in the
 mind of any person by whom the principle itself is recognized.
 
-FOOTNOTES:
-
-[Footnote A: The author of this essay has reason for believing himself
-to be the first person who brought the word utilitarian into use. He did
-not invent it, but adopted it from a passing expression in Mr. Galt's
-_Annals of the Parish_. After using it as a designation for several
-years, he and others abandoned it from a growing dislike to anything
-resembling a badge or watchword of sectarian distinction. But as a name
-for one single opinion, not a set of opinions--to denote the recognition
-of utility as a standard, not any particular way of applying it--the
-term supplies a want in the language, and offers, in many cases, a
-convenient mode of avoiding tiresome circumlocution.]
-
-[Footnote B: An opponent, whose intellectual and moral fairness it is a
-pleasure to acknowledge (the Rev. J. Llewellyn Davis), has objected to
-this passage, saying, "Surely the rightness or wrongness of saving a man
-from drowning does depend very much upon the motive with which it is
-done. Suppose that a tyrant, when his enemy jumped into the sea to
-escape from him, saved him from drowning simply in order that he might
-inflict upon him more exquisite tortures, would it tend to clearness to
-speak of that rescue as 'a morally right action?' Or suppose again,
-according to one of the stock illustrations of ethical inquiries, that a
-man betrayed a trust received from a friend, because the discharge of it
-would fatally injure that friend himself or some one belonging to him,
-would utilitarianism compel one to call the betrayal 'a crime' as much
-as if it had been done from the meanest motive?"
-
-I submit, that he who saves another from drowning in order to kill him
-by torture afterwards, does not differ only in motive from him who does
-the same thing from duty or benevolence; the act itself is different.
-The rescue of the man is, in the case supposed, only the necessary first
-step of an act far more atrocious than leaving him to drown would have
-been. Had Mr. Davis said, "The rightness or wrongness of saving a man
-from drowning does depend very much"--not upon the motive, but--"upon
-the _intention_" no utilitarian would have differed from him. Mr. Davis,
-by an oversight too common not to be quite venial, has in this case
-confounded the very different ideas of Motive and Intention. There is no
-point which utilitarian thinkers (and Bentham pre-eminently) have taken
-more pains to illustrate than this. The morality of the action depends
-entirely upon the intention--that is, upon what the agent _wills to do_.
-But the motive, that is, the feeling which makes him will so to do, when
-it makes no difference in the act, makes none in the morality: though it
-makes a great difference in our moral estimation of the agent,
-especially if it indicates a good or a bad habitual _disposition_--a
-bent of character from which useful, or from which hurtful actions are
-likely to arise.]
-
-
-
-
-CHAPTER III.
-
-
-OF THE ULTIMATE SANCTION OF THE PRINCIPLE OF UTILITY.
+== Chapter III -- Of the Ultimate Sanction of the Principle of Utility
 
 The question is often asked, and properly so, in regard to any supposed
 moral standard--What is its sanction? what are the motives to obey it?
@@ -1341,13 +1242,7 @@ moral blank, could bear to lay out their course of life on the plan of
 paying no regard to others except so far as their own private interest
 compels.
 
-
-
-
-CHAPTER IV.
-
-
-OF WHAT SORT OF PROOF THE PRINCIPLE OF UTILITY IS SUSCEPTIBLE.
+== Chapter IV -- Of What Sort of Proof the Principle of Utility is Susceptible
 
 It has already been remarked, that questions of ultimate ends do not
 admit of proof, in the ordinary acceptation of the term. To be incapable
@@ -1597,13 +1492,7 @@ But if this doctrine be true, the principle of utility is proved.
 Whether it is so or not, must now be left to the consideration of the
 thoughtful reader.
 
-
-
-
-CHAPTER V.
-
-
-ON THE CONNEXION BETWEEN JUSTICE AND UTILITY.
+== Chapter V -- On the Connexion Between Justice and Utility
 
 In all ages of speculation, one of the strongest obstacles to the
 reception of the doctrine that Utility or Happiness is the criterion of
@@ -1668,7 +1557,7 @@ provision of Nature. If we find the former to be the case, we shall, in
 resolving this question, have resolved also the main problem: if the
 latter, we shall have to seek for some other mode of investigating it.
 
-       *       *       *       *       *
+'''
 
 To find the common attributes of a variety of objects, it is necessary
 to begin, by surveying the objects themselves in the concrete. Let us
@@ -1910,7 +1799,7 @@ or disparagement, according as we think that the person ought, or ought
 not, to be punished for it; and we say that it would be right to do so
 and so, or merely that it would be desirable or laudable, according as
 we would wish to see the person whom it concerns, compelled or only
-persuaded and exhorted, to act in that manner.[C]
+persuaded and exhorted, to act in that manner.footnote:[See this point enforced and illustrated by Professor Bain, in an admirable chapter (entitled "The Ethical Emotions, or the Moral Sense") of the second of the two treatises composing his elaborate and profound work on the Mind.]
 
 This, therefore, being the characteristic difference which marks off,
 not justice, but morality in general, from the remaining provinces of
@@ -2287,7 +2176,7 @@ which is unequal. To this others reply, that the all of one man is as
 valuable to him as the all of another. From these confusions there is no
 other mode of extrication than the utilitarian.
 
-       *       *       *       *       *
+'''
 
 Is, then, the difference between the Just and the Expedient a merely
 imaginary distinction? Have mankind been under a delusion in thinking
@@ -2412,7 +2301,7 @@ equal in degree (with the proper allowance made for kind), is counted
 for exactly as much as another's. Those conditions being supplied,
 Bentham's dictum, 'everybody to count for one, nobody for more than
 one,' might be written under the principle of utility as an explanatory
-commentary.[D] The equal claim of everybody to happiness in the
+commentary.footnote:[This implication, in the first principle of the utilitarian scheme, of perfect impartiality between persons, is regarded by Mr. Herbert Spencer (in his _Social Statics_) as a disproof of the pretentions of utility to be a sufficient guide to right; since (he says) the principle of utility presupposes the anterior principle, that everybody has an equal right to happiness. It may be more correctly described as supposing that equal amounts of happiness are equally desirable, whether felt by the same or by different persons. This, however, is not a pre-supposition; not a premise needful to support the principle of utility, but the very principle itself; for what is the principle of utility, if it be not that 'happiness' and 'desirable' are synonymous terms? If there is any anterior principle implied, it can be no other than this, that the truths of arithmetic are applicable to the valuation of happiness, as of all other measurable quantities. Mr. Herbert Spencer, in a private communication on the subject of the preceding Note, objects to being considered an opponent of Utilitarianism; and states that he regards happiness as the ultimate end of morality; but deems that end only partially attainable by empirical generalizations from the observed results of conduct, and completely attainable only by deducing, from the laws of life and the conditions of existence, what kinds of action necessarily tend to produce happiness, and what kinds to produce unhappiness. With the exception of the word "necessarily," I have no dissent to express from this doctrine; and (omitting that word) I am not aware that any modern advocate of utilitarianism is of a different opinion. Bentham, certainly, to whom in the _Social Statics_ Mr. Spencer particularly referred, is, least of all writers, chargeable with unwillingness to deduce the effect of actions on happiness from the laws of human nature and the universal conditions of human life. The common charge against him is of relying too exclusively upon such deductions, and declining altogether to be bound by the generalizations from specific experience which Mr. Spencer thinks that utilitarians generally confine themselves to. My own opinion (and, as I collect, Mr. Spencer's) is, that in ethics, as in all other branches of scientific study, the consilience of the results of both these processes, each corroborating and verifying the other, is requisite to give to any general proposition the kind and degree of evidence which constitutes scientific proof.] The equal claim of everybody to happiness in the
 estimation of the moralist and the legislator, involves an equal claim
 to all the means of happiness, except in so far as the inevitable
 conditions of human life, and the general interest, in which that of
@@ -2476,52 +2365,5 @@ attaches to the mere idea of promoting human pleasure or convenience, at
 once by the more definite nature of its commands, and by the sterner
 character of its sanctions.
 
-
-THE END.
-
-FOOTNOTES:
-
-[Footnote C: See this point enforced and illustrated by Professor Bain,
-in an admirable chapter (entitled "The Ethical Emotions, or the Moral
-Sense") of the second of the two treatises composing his elaborate and
-profound work on the Mind.]
-
-[Footnote D: This implication, in the first principle of the utilitarian
-scheme, of perfect impartiality between persons, is regarded by Mr.
-Herbert Spencer (in his _Social Statics_) as a disproof of the
-pretentions of utility to be a sufficient guide to right; since (he
-says) the principle of utility presupposes the anterior principle, that
-everybody has an equal right to happiness. It may be more correctly
-described as supposing that equal amounts of happiness are equally
-desirable, whether felt by the same or by different persons. This,
-however, is not a pre-supposition; not a premise needful to support the
-principle of utility, but the very principle itself; for what is the
-principle of utility, if it be not that 'happiness' and 'desirable' are
-synonymous terms? If there is any anterior principle implied, it can be
-no other than this, that the truths of arithmetic are applicable to the
-valuation of happiness, as of all other measurable quantities.
-
-[Mr. Herbert Spencer, in a private communication on the subject of the
-preceding Note, objects to being considered an opponent of
-Utilitarianism; and states that he regards happiness as the ultimate end
-of morality; but deems that end only partially attainable by empirical
-generalizations from the observed results of conduct, and completely
-attainable only by deducing, from the laws of life and the conditions of
-existence, what kinds of action necessarily tend to produce happiness,
-and what kinds to produce unhappiness. With the exception of the word
-"necessarily," I have no dissent to express from this doctrine; and
-(omitting that word) I am not aware that any modern advocate of
-utilitarianism is of a different opinion. Bentham, certainly, to whom in
-the _Social Statics_ Mr. Spencer particularly referred, is, least of all
-writers, chargeable with unwillingness to deduce the effect of actions
-on happiness from the laws of human nature and the universal conditions
-of human life. The common charge against him is of relying too
-exclusively upon such deductions, and declining altogether to be bound
-by the generalizations from specific experience which Mr. Spencer thinks
-that utilitarians generally confine themselves to. My own opinion (and,
-as I collect, Mr. Spencer's) is, that in ethics, as in all other
-branches of scientific study, the consilience of the results of both
-these processes, each corroborating and verifying the other, is
-requisite to give to any general proposition the kind and degree of
-evidence which constitutes scientific proof.]]
+The End.
 
